# rust_lifegame

./: Cargo.toml  README.md
src/: animation.rs  game.rs  lib.rs  main.rs  support.rs
